Bug 1946790 - Update password-card to use --border-color-transparent. r=#credential-management-reviewers
To prevent borders from appearing on the password-card, we need to
switch out --border-color to --border-color-transparent.

In order to prevent additional whitespace at the bottom of the card
when an alert is present, we needed to move the border to a
prefers-contrast media query. However, the border radius of this alert
when in prefers-contrast or forced-colors needed to be adjusted as well.

By utilizing the previously added media query, we adjust the border
radius for the message bar via CSS variables instead of writing another
media query to change the border radius.

Differential Revision: https://phabricator.services.mozilla.com/D248969

--- a/toolkit/components/satchel/megalist/content/components/password-card/password-card.css
+++ b/toolkit/components/satchel/megalist/content/components/password-card/password-card.css
@@ -6,9 +6,13 @@
   display: flex;
   flex-direction: column;
   background-color: var(--background-color-box);
-  border: var(--border-width) solid var(--border-color);
   border-radius: var(--border-radius-small);
   box-shadow: var(--box-shadow-card);
+  --card-message-bar-border-radius: 0 0 var(--border-radius-medium) var(--border-radius-medium);
+  @media (prefers-contrast) {
+    border: var(--border-width) solid var(--border-color-transparent);
+    --card-message-bar-border-radius: 0 0 var(--border-radius-small) var(--border-radius-small);
+  }
 }
 
 .line-item:focus-visible,
@@ -28,7 +32,7 @@
 }
 
 moz-message-bar {
-  border-radius: 0 0 var(--border-radius-medium) var(--border-radius-medium);
+  border-radius: var(--card-message-bar-border-radius);
   height: 50px;
   position: relative;
 
